--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "baseUrl": "src"/*Source Directory as Base URL*/
+    "baseUrl": "src"
   },
-  "include": ["src"]/*When we import different files into other files,we can start up from source*/
+  "include": ["src"]
 }
